@@ -1,3 +1,8 @@
+2000-02-19  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf.c (try_to_contact_server): Make sure we always set 
+	an error
+
 2000-02-15  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf-changeset.c (gconf_change_set_set): apply patch from 
